--- a/document_final.tex
+++ b/document_final.tex
@@ -660,25 +660,24 @@ On expose ici des variantes du problème, pour lesquelles la forme de la région e
 On peut décider que les explorateurs partent de deux points sources, espacés d'une distance de l'ordre du rayon théorique de la boule.
 
 \subsection{Décalage vers la droite}
-Choisissons de ne plus faire voyager nos $n$ explorateurs selon des marches aléatoires symétriques, mais des marches déséquilibrées vers un côté. Par exemple, sur $\mathbb{Z}^2$, construisons une marche en suivant les probabilités
-\[P(\mathrm{haut}) = 1/2, P(\mathrm{bas}) = 1/2, P(\mathrm{gauche}) = 1/2 - \epsilon, P(\mathrm{droite}) = 1/2 + \epsilon , \]
+Choisissons de ne plus faire voyager nos $N$ explorateurs selon des marches aléatoires symétriques, mais des marches déséquilibrées vers un côté. Par exemple, sur $\mathbb{Z}^2$, construisons une marche en suivant les probabilités
+\[P(\mathrm{haut}) = 1/4,\  P(\mathrm{bas}) = 1/4, \  P(\mathrm{gauche}) = 1/4 - \epsilon, \ P(\mathrm{droite}) = 1/4 + \epsilon , \]
 où $\epsilon > 0$.
 
-Voici un exemple de région obtenue :
 \begin{figure}[H]
  \centering
    \includegraphics[scale=0.8]{drift.jpg}
    \caption{Région obtenue pour des marches déséquilibrées}
 \end{figure}
 
-Il semble que la déviation à droite dans ce cas soit de l'ordre de $n^{2/3}$, comme le suggère la courbe suivante où l'on trace l'évolution du logarithme de cette déviation et une courbe référence de pente $2/3$ :
+Il semble que la déviation à droite dans ce cas soit de l'ordre de $N^{2/3}$, comme le suggère la courbe suivante où l'on trace l'évolution du logarithme de cette déviation et une courbe référence de pente $2/3$ :
 \begin{figure}[H]
  \centering
    \includegraphics[scale=0.5]{log.jpg}
-   \caption{Log de la distance maximale à l'origine (en noir) et droite de pente 2/3 (en bleu)}
+   \caption{Log de la distance maximale à l'origine (en noir) et pente 2/3 (en bleu)}
 \end{figure}
 
-De plus, on peut avancer l'argument suivant : 
+Ceci ne semble pas étonnant, à cause de l'argument suivant : une telle marche déséquilibrée a tendance, en projection sur l'horizontale, à s'écarter vers la droite linéairement avec le temps $t$. En projection verticale, elle dévie comme $\sqrt{t}$ (marche symétrique unidimensionnelle). La région obtenue doit d'une certaine façon respecter ces ordres de grandeur, donc son étendue horizontale doit varier comme le carré de son étendue verticale. Comme le produit des deux vaut $N$, il faut avoir une étendue horizontale en $N^{2/3}$ et verticale en $N^{1/3}$.
 \appendix 
 
 \section{Propriétés annexes}
