--- a/document_final.tex
+++ b/document_final.tex
@@ -285,7 +285,7 @@ On définit alors $(y_1=z,y_2,\dots,y_k=z_p)$ une suite de plus proches voisins d
  \centering
    \includegraphics[scale=0.8]{tentacule.png}
    \caption{La suite des $y_n$}
-\label{vague}
+\label{vagueimage}
 \end{figure}
 On peut trouver une constante $c_1$ qui permet de prendre $k\leqslant c_1p$. Pour cela, on procède de la façon suivante: on appelle $C$ le diamètre de la figure composée de deux cube unitaire partageant une face, de façon à avoir $\|z_n-z_{n-1}\|\leqslant C$. Il est alors possible de relier $z_n$ à $z_{n-1}$ par une suite de plus proches voisins de taille inférieure à $c_1=dC$, ce qui prouve le résulat.
 On alors $k\leqslant c_1(R-\|z\|+\sqrt{d}+1) \leqslant c(R- \|z\|)$ pour $c$ une constante suffisamment grande. Comme $N \geqslant c(R-\|z\|)$, on peut forcer les $k$ premiers explorateurs à s'installer successivement sur $y_1, \dots, y_k$, et la probabilité de cet événement est :
@@ -327,7 +327,7 @@ On constate que \{$\delta_O(R_n)\geqslant h(R_n)$\} est lié à $\{\mathrm{cov}(z)
  \nonumber\\&\geqslant P(\bigcup_{z\in\Sigma}\mathrm{cov}(z))
 \end{align}
 
-Il nous faut désormais estimer $P(\bigcup_{z\in\Sigma}\mathrm{cov}(z))$. Pour cela, il serait intéressant d'avoir indépendance entre les $\mathrm{cov}(z)$ sous certaines hypothèses, ce qu'on va obtenir en prenant pour $X_n$ une variable de Poisson. En effet, les variables de Poisson ont la propriété de découpage \ref{indé}, qui laisse penser que les $N_z$ seront indépendantes et de loi de Poisson comme on le verra en \ref{indé}.
+Il nous faut désormais estimer $P(\bigcup_{z\in\Sigma}\mathrm{cov}(z))$. Pour cela, il serait intéressant d'avoir indépendance entre les $\mathrm{cov}(z)$ sous certaines hypothèses, ce qu'on va obtenir en prenant pour $X_n$ une variable de Poisson. En effet, les variables de Poisson ont la propriété de découpage \ref{indé}, qui laisse penser que les $N_z$ seront indépendantes et de loi de Poisson. Les lois de Poisson sont les seules parmi les lois usuelles à pouvoir se décomposer ainsi.
 
 Cette propriété ne permet pas pour autant d'affirmer que les $N_z$ sont indépendantes de ce qui se passe avant pour $z \in \Sigma$, mais cela sera vrai lorsque $\delta_I(n) < L(n)$. On définit en effet pour tout $z\in\Sigma$
 \begin{equation}
@@ -347,7 +347,7 @@ et donc $N'_z=N_z$ et $\mathrm{cov_2}(z) \subset \mathrm{cov}(z)$.
 
 Soit $U$ la variable aléatoire à valeur dans $\Sigma$ calculée en regardant en quel point une marche aléatoire symétrique atteint $\Sigma$. On alors :
 \begin{equation}
-\label{indé}
+\label{nprime}
  N'_z=\sum_{p\leqslant X_n}{1_{U_p=z}}
 \end{equation}
 D'après la proposition \ref{indé} les $N'_z$ sont alors des variables de Poisson indépendantes, et donc les $\mathrm{cov_2}(z)$ sont indépendants. Ils sont de plus indépendants de $\delta_I(n)$ puisque celui-ci ne dépend que de la première vague alors que $\mathrm{cov_2}$ en est indépendant. Résumons ce qu'on a fait jusqu'à présent :
@@ -436,7 +436,7 @@ Il suffit maintenant de fixer $\alpha$ suffisamment petit pour que $d-1-\alpha^2
 
 Il n'est pas clair \emph{a priori} que ce théorème nous donne vraiment une indication sur l'optimalité de $h(n)$ pour l'erreur externe, mais on peut voir qu'il implique le résultat intéressant suivant :
 \begin{Cor}
- \begin{equation} \label{io}
+ \begin{equation} \label{io2}
    P(\limsup\limits_{n\to\infty}\{\delta_I(n)\geqslant L(n)\}\cup\{\delta_O(n)\geqslant h(n)\})=1
   \end{equation}
 \begin{proof}
@@ -516,7 +516,7 @@ On va s'appuyer sur ce $Z_k$ pour construire un évènement $I_k$ qui pourra s'int
  \centering
    \includegraphics{Ik.jpg}
    \caption{Exemple de réalisation de $I_k$}
-   \label{ex}
+   \label{ik}
  \end{figure}
 Si $I_k$ est réalisé, on aimerait pouvoir dire que dans le cas où $Z_k$ n'est pas visité (un trou apparaît) on a $\delta_I (R_k) \geqslant h(R_k)$ et que dans le cas contraire (un long tentacule apparaît) on a $\delta_O (R_k) \geqslant L(R_k)$. Pour cela, il faut montrer que sous certaines conditions sur $X_k$ on a $R_k - \| Z_k \| \geqslant h(R_k)$ et $\| Z_k \| - R_k + 7 L(R_{k-1}) \geqslant L(R_k)$.
 
@@ -827,7 +827,7 @@ De même :
 \end{align*}
 Et on a donc :
 \begin{equation*}
- \normalfont{|}\frac{b(n)}{V(n)}-1\normalfont{|}\leqslant\frac{1}{V(n)}(\normalfont{|}c(n)-b(n)\normalfont{|}+\normalfont{|}c(n)-V(n)\normalfont{|})=O(\frac{1}{n})
+ | \frac{b(n)}{V(n)}-1 | \leqslant\frac{1}{V(n)}(\normalfont{|}c(n)-b(n)\normalfont{|}+\normalfont{|}c(n)-V(n)\normalfont{|})=O(\frac{1}{n})
 \end{equation*}
 
 \item Posons :
