--- a/document_final.tex
+++ b/document_final.tex
@@ -339,9 +339,9 @@ où $N'_z=W_{r_n}(\Delta_n;\zeta_0^{X_n},z)$ est le nombre d'explorateurs de la d
    \includegraphics{cov2.png}
    \caption{Un exemple où $\mathrm{cov_2}(z)$ est réalisé}
 \end{figure}
-On remarque que la seule différence entre $\mathrm{cov}(z)$ et $\mathrm{cov_2}(z)$ est la région explorée avant de lancer la deuxième vague. C'est ici qu'il est important de se placer dans le cas $\delta_I(n)<L(n)$, et on restera dans ce cas jusqu'à la fin de cette partie, puisqu'on a alors:
+On remarque que la seule différence entre $\mathrm{cov}(z)$ et $\mathrm{cov_2}(z)$ est la région explorée avant de lancer la deuxième vague. C'est ici qu'il est important de se placer dans le cas $\delta_I(n)<L(n)$, et on restera dans ce cas jusqu'à la fin de cette partie, puisqu'on a alors :
 \begin{equation*}
- W_{n-L(n)}(A(\zeta_0^{b(n)});X_n1_0,z)=M_{n-L(n)}(X_n1_0,z)
+ W_{n-L(n)}(A(\zeta_0^{b(n)});X_n1_0,z)=M_{n-L(n)}(X_n1_0,z) ,
 \end{equation*}
 et donc $N'_z=N_z$ et $\mathrm{cov_2}(z) \subset \mathrm{cov}(z)$. 
 
